# todo

./: .gitignore  CMakeLists.txt  README.md  settings.json  tasks.json
src/: main.cpp  main_window.cpp  main_window.hpp  main_window.ui  task.cpp  task.hpp  task_dialog.cpp  task_dialog.hpp  task_dialog.ui  task_loader.cpp  task_loader.hpp  todo_item.hpp
